added the migrations file to the .gitign

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 *.sqlite3
 # Ignore the default SQLite database.
 /db/*.sqlite3
-api/migrations
-accounts/migrations
 
-**/migrations/
+
+api/migrations/
+accounts/migrations/
